cleaned up a few notebooks

--- a/Creating_Test_Train.ipynb
+++ b/Creating_Test_Train.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0733938a",
+   "metadata": {},
+   "source": [
+    "## This notebook was used to create test and train datasets.   It groups streets based mean sale price since houses on the same street had a low variance of sale price.  However we ended up not using the train/test created here because it resulted in data leakage.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "1464f109",
@@ -465,8 +473,17 @@
    "source": [
     "# saving the dataframes as a CSV file\n",
     "strat_train_set.to_csv('data/train_set.csv', index=False)\n",
-    "strat_test_set.to_csv('data/test_set.csv', index=False)\n",
-    "\n"
+    "strat_test_set.to_csv('data/test_set.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d67e44",
+   "metadata": {},
+   "source": [
+    "This function groups streets in the training and testing dataframes based on the mean sale price of each street in its neighborhood. It then adds a new column to both dataframes indicating which group each street belongs to.\n",
+    "\n",
+    "Please note that if a street-neighborhood combination exists in the training set but not the testing set, there will be missing values in the newly created column of the testing dataframe. This is why the fill_na function was created later in the notebook"
    ]
   },
   {
@@ -504,13 +521,6 @@
     }
    ],
    "source": [
-    "# creating a function to create groups based on mean sale price of streets in each\n",
-    "# neighborhood of the training df and adds a new column with the groups created\n",
-    "# It then uses the groups created using the training dataframe and creates a new column\n",
-    "# in the testing dataframe by mapping these groups.  This will result in missing values\n",
-    "# If there is a street neighborhood combination that was in the training dataset but \n",
-    "# not the testing dataset\n",
-    "\n",
     "\n",
     "def group_neighbor_streets_by_saleprice(\n",
     "    traindf=train_df, testdf=test_df, num_quantiles=10\n",
@@ -564,12 +574,20 @@
     }
    ],
    "source": [
-    "# the num of quantiles can be changed and it is assigned to d which is the dictionary that\n",
+    "# The number of quantiles can be changed and it is assigned to d which is the dictionary that\n",
     "# will be used to fill in the missing values\n",
     "\n",
     "d = group_neighbor_streets_by_saleprice(\n",
     "    traindf=strat_train_set, testdf=strat_test_set, num_quantiles=5\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae04eb2",
+   "metadata": {},
+   "source": [
+    "The below function was created to fill the missing values for StreetPriceGroup in the test dataset.  If the test dataset has a street not found in the training dataset, the StreetPriceGroup will be filled in with a StreetPriceGroup value in the same neighborhood.  "
    ]
   },
   {
@@ -607,9 +625,6 @@
     }
    ],
    "source": [
-    "# this will use the dictionary created to fill in the missing values in the test df with\n",
-    "# another group in the same neighborhood\n",
-    "\n",
     "\n",
     "def fill_na(testdf=test_df, d={}):\n",
     "    # Extract the first part of the string in the \"Neighborhood_st\" column\n",
@@ -867,115 +882,6 @@
    "source": [
     "housing.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "66542856",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 21;\n",
-       "                var nbb_unformatted_code = \"# Should these rows also be removed where the sale condition is not normal?\\n\\n# Normal: indicates a normal sale where no special conditions apply.\\n# Partial: indicates a sale where the buyer purchases a partial interest in the property, such as a partial ownership of the land or building.\\n# Abnorml: indicates an abnormal sale where conditions like foreclosure, short sale or sheriff sale apply.\\n# Family: indicates a sale between family members.\\n# Alloca: indicates a sale where the property was sold to a relocation company.\\n# AdjLand: indicates a sale where the property is adjacent to land zoned for commercial or industrial use.\";\n",
-       "                var nbb_formatted_code = \"# Should these rows also be removed where the sale condition is not normal?\\n\\n# Normal: indicates a normal sale where no special conditions apply.\\n# Partial: indicates a sale where the buyer purchases a partial interest in the property, such as a partial ownership of the land or building.\\n# Abnorml: indicates an abnormal sale where conditions like foreclosure, short sale or sheriff sale apply.\\n# Family: indicates a sale between family members.\\n# Alloca: indicates a sale where the property was sold to a relocation company.\\n# AdjLand: indicates a sale where the property is adjacent to land zoned for commercial or industrial use.\";\n",
-       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
-       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
-       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
-       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
-       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
-       "                        }\n",
-       "                        break;\n",
-       "                    }\n",
-       "                }\n",
-       "            }, 500);\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Should these rows also be removed where the sale condition is not normal?\n",
-    "\n",
-    "# Normal: indicates a normal sale where no special conditions apply.\n",
-    "# Partial: indicates a sale where the buyer purchases a partial interest in the property, such as a partial ownership of the land or building.\n",
-    "# Abnorml: indicates an abnormal sale where conditions like foreclosure, short sale or sheriff sale apply.\n",
-    "# Family: indicates a sale between family members.\n",
-    "# Alloca: indicates a sale where the property was sold to a relocation company.\n",
-    "# AdjLand: indicates a sale where the property is adjacent to land zoned for commercial or industrial use."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f25cf2e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f184e028",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43a08ae3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f92c874",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac58048a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "803c9f60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a90a908",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "236b90ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
