--- a/models/Random_Forest_feature_accuracy.ipynb
+++ b/models/Random_Forest_feature_accuracy.ipynb
@@ -106,7 +106,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "3ff533c3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -148,7 +150,7 @@
    "id": "3351a031",
    "metadata": {},
    "source": [
-    "## Oridnal Coding since this is the preferred method for Random Forest over Dummifying (One-Hot Encoding) ##"
+    "## Oridinal categorical data was already encoded properly in a previous notebook.   This is an important step we took since SHAP values wont be properly calculated otherwise.  Ordinal encoding was used for the remaining nominal categorical data."
    ]
   },
   {
@@ -706,37 +708,6 @@
     "    - fit the model using train set\n",
     "    - print out the train/test errors\n",
     "    - return the train/test errors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea10c064",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_error(X_train, y_train, X_test, y_test, model, show = True):\n",
-    "#     model.fit(X_train, y_train)\n",
-    "#     train_error = 1 - model.score(X_train, y_train)\n",
-    "#     test_error  = 1 - model.score(X_test, y_test)\n",
-    "#     if show:\n",
-    "#         print(\"The training error is: %.5f\" %train_error)\n",
-    "#         print(\"The test     error is: %.5f\" %test_error)\n",
-    "#     return [train_error, test_error]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ae0e3d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn import tree\n",
-    "# tree_model = tree.DecisionTreeClassifier()\n",
-    "# tree_model.fit(X_train, y_train)\n",
-    "# print(\"Training error: \" + str(1-tree_model.score(X_train, y_train)))\n",
-    "# print(\"Test error: \" + str(1-tree_model.score(X_test, y_test)))"
    ]
   },
   {
