Cleaned a few notebooks

--- a/Notebooks_not_used/Random_Forest_with_bins.ipynb
+++ b/Notebooks_not_used/Random_Forest_with_bins.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9b1cdce3",
+   "metadata": {},
+   "source": [
+    "### This notebook explores using bins for caegorical data.  This idea was not pursued.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "c4689f44",
