--- a/Correlated_variables.ipynb
+++ b/Correlated_variables.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b7741e12",
+   "metadata": {},
+   "source": [
+    "### This notebook removes highly correlated features and creates housing_corr csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "0aab9173",
